Ajustes de Acessibilidade e SEO

--- a/loginScreen.html
+++ b/loginScreen.html
@@ -45,15 +45,15 @@
             </section>
     
             <section class="container-btn">
-                <input type="submit" value="Log Into" id="btn-login">
+                <input type="submit" value="Login" id="btn-login" aria-label="Login">
             </section>
 
             <h3>or</h3>
 
             <section class="icons-account">
-                <figure class="icons"><i class="fa-brands fa-google"></i></figure>
-                <figure class="icons"><i class="fa-brands fa-facebook-f"></i></figure>
-                <figure class="icons"><i class="fa-brands fa-linkedin-in"></i></figure>
+                <figure class="icons" tabindex="0" role="button" aria-label="Enter with google"><i class="fa-brands fa-google" aria-hidden="true"></i></figure>
+                <figure class="icons" tabindex="0" role="button" aria-label="Enter with facebook"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></figure>
+                <figure class="icons" tabindex="0" role="button" aria-label="Enter with linkedin"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></figure>
             </section>
     
         </form>
