--- a/registrationScreen.html
+++ b/registrationScreen.html
@@ -67,15 +67,15 @@
             </section>
 
             <section>
-                <input type="submit" value="Send Data" id="btn-registration" class="btn-register">
+                <input type="submit" value="Send Data" id="btn-registration" class="btn-register" aria-label="Send data">
             </section>
 
             <h3>or</h3>
 
             <section class="icons-account">
-                <figure class="icons"><i class="fa-brands fa-google"></i></figure>
-                <figure class="icons"><i class="fa-brands fa-facebook-f"></i></figure>
-                <figure class="icons"><i class="fa-brands fa-linkedin-in"></i></figure>
+                <figure class="icons" tabindex="0" role="button" aria-label="Enter with google"><i class="fa-brands fa-google" aria-hidden="true"></i></figure>
+                <figure class="icons" tabindex="0" role="button" aria-label="Enter with facebook"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></figure>
+                <figure class="icons" tabindex="0" role="button" aria-label="Enter with linkedin"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></figure>
             </section>
     
         </form>
